--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -3,13 +3,20 @@
     height: 650px;
     box-shadow: 3px 6px 20px -5px rgba(0, 0, 0, 0.25), -3px -6px 20px -5px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
-  }
+}
 
 .job-type {
     top: 375px;
 }
 
-.select-flex{
+.select-flex {
     display: flex;
     justify-content: space-between;
-  }
+}
+
+.repo-link{
+    text-decoration: none;
+    position: absolute;
+    bottom: 25px;
+    font-size: 20px;
+}
